# aroop_core

./: .travis.yml  AUTHORS  COPYING  Makefile.am  NEWS  README  README.md  TASKS.md  TODO.md  configure.ac
aroop/: Makefile.am  aroop_factory.h
aroop/core/: xtring.h
aroop/opp/: opp_factory.h  opp_hash_table.h  opp_queue.h
aroop/src/: aroop_core.c  aroop_factory.c
aroop/tests/: Makefile.am
collection/: Makefile.am
collection/src/: opp_any_obj.c  opp_factory_profiler.c  opp_hash_table.c
collection/tests/: Makefile.am  check_opp_iterator.c
factory/: Makefile.am
factory/inc/: opp_factory_part_internal.h
factory/src/: opp_factory_create.c  opp_factory_part_alloc.c  opp_factory_part_iterator.c  opp_factory_part_property.c
factory/tests/: Makefile.am  check_avl_tree_partion_test.c  check_avl_tree_partition_test.c  check_opp_factory_create.c  check_opp_factory_part_alloc.c
includes/: Makefile.am  aroop_core.pc.in
includes/aroop/: aroop_core.h  aroop_factory.h
includes/aroop/core/: config.h
includes/aroop/opp/: opp_factory.h  opp_hash_ctable.h  opp_hash_otable.h  opp_hash_table.h
includes/aroop/platform/linux/: linux_config.h
lookup/: Makefile.am
lookup/src/: opp_hash_ctable.c  opp_hash_otable.c
lookup/tests/: Makefile.am  check_opp_hash_ctable.c  check_opp_hash_otable.c
src/: opp_factory.c  opp_hash_table.c  opp_queue.c
test/: test.c
