
AROOP_DEBUG_CFLAG =  -ggdb3 -DAROOP_OPP_PROFILE -DAROOP_OPP_DEBUG -DMTRACE -DOPP_DEBUG
export AROOP_DEBUG_CFLAG

AROOP_OPT_CFLAG =  -O3 -DAROOP_BASIC
export AROOP_OPT_CFLAG

AROOP_PROFILER_CFLAG =  -O3 -DAROOP_BASIC -DAROOP_OPP_PROFILE
export AROOP_PROFILER_CFLAG

SUBDIRS = factory collection aroop

